# smallpt

./: .gitignore  Cargo.toml  authorship  first_render.ppm  hires_render.md  readme.md  useful_scripts.md
src/: main.rs  parallel_compute.rs  radiance.rs  ray.rs  raytracer.rs  scene.rs  sphere.rs  vec3.rs
src/worker_mode/: master.rs  mod.rs  slave.rs
