[package]
name = "smallpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.0"
image = { version = "0.24.6", features = ["pnm"] }
show-image = { version = "0.13.1", features = ["image"] }
