[package]
name = "smallpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true

[dependencies]
clearscreen = "2.0.1"
fastrand = "2.0.0"
image = { version = "0.24.6", features = ["pnm"] }
rayon = "1.7.0"
show-image = { version = "0.13.1", features = ["image"] }
